========================
Changes for Lovey Pyrest
========================

2014/01/28 2.0.10
=================

 - removed array validation conversion for get params

2014/01/28 2.0.9
================

 - added optional convert_get_params parameter to validate function

2014/01/24 2.0.8
================

 - modified the documentation output
    - validation schema is rendered as code block
    - endpoint title is first line of docstring

2014/01/16 2.0.7
================

 - removed error views from package

2014/01/15 2.0.6
================

 - fixed documentation setup

 - removed unused error view

2014/01/14 2.0.5
================

 - updated documentation and added first example

 - moved content of testing/tests.py to lovely/pyrest/tests.py

2014/01/14 2.0.4
================

 - updated documentation for sphinx directive

 - fixed optional positional arguments in sphinx directive

2014/01/14 2.0.3
================

 - added sphinx option for pyramid_config path. With this option set
   url prefixes are rendered correctly and it's not necessary to specify
   a module in service directive

2014/01/14 2.0.2
================

 - bugfix: prevent duplicate rendering of methods in autodoc

2014/01/14 2.0.1
================

 - updated documentation generation for lovely.pyrest 2.0

2014/01/10 2.0.0
================

 - new version using decorator approach to define rest services